--- a/public/css/style.css
+++ b/public/css/style.css
@@ -431,8 +431,8 @@ body {
     }
 
     .card-videos {
-        width: 380px !important;
-        height: 200px !important;
+        width: 400px !important;
+        height: 220px !important;
     }
 
     .popup-img {
@@ -446,8 +446,8 @@ body {
     }
 
     .card-videos {
-        width: 400px !important;
-        height: 280px !important;
+        width: 420px !important;
+        height: 300px !important;
     }
 
     .popup-img {
@@ -462,7 +462,7 @@ body {
 
     .card-videos {
         width: 505px !important;
-        height: 320px !important;
+        height: 350px !important;
     }
 
     .popup-img {
@@ -602,7 +602,7 @@ body {
 }
 
 .card-price {
-    height: 650px;
+    height: 550px;
     width: 33.33333333333%;
     border: none !important;
     border-radius: 0px !important;
@@ -629,7 +629,7 @@ body {
     display: none;
 }
 
-.card-price-footer:hover .card-price-footer-link {
+.card-price:hover .card-price-footer-link {
     display: block;
     transition: display 1s ease;
 }
@@ -994,7 +994,7 @@ body {
     }
 
     .card-videos {
-        height: 200px !important;
+        height: 270px !important;
     }
 
     .swiper-container.price-thumbs {
@@ -1067,6 +1067,10 @@ body {
     .swiper {
         width: 100%;
         height: 900px !important;
+    }
+
+    .card-videos{
+        height: 215px !important;
     }
 }
 
@@ -1210,7 +1214,7 @@ body {
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.9);
     overflow-x: hidden;
-    transition: height 0.3s;
+    transition: height 0.2s ease;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1399,19 +1403,19 @@ body {
 }
 
 .menu-overlay-link1{
-    transition-delay: 300ms;
+    transition-delay: 200ms;
 }
 
  .menu-overlay-link2{
-    transition-delay: 600ms;
+    transition-delay: 350ms;
 }
 
 .menu-overlay-link3 {
-    transition-delay: 900ms;
+    transition-delay: 500ms;
 }
 
 .menu-overlay-link4 {
-    transition-delay: 1200ms;
+    transition-delay: 650ms;
 }
 
 
