--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1786,3 +1786,18 @@ body {
 
 
 }
+
+
+
+.fullView{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: position .3s ease;
+}
+
+.border-thumbs{
+    border : 1px solid #ce3200;
+}
